fixed search bar centering on small screens, added error messages, improved repos modal looks

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@
   margin-top: 150px;
   margin-bottom: 50px;
 }
+
+a, a:visited {
+  text-decoration: underline dotted;
+  color: #0366d6;
+}
+
+a:hover {
+  color: #004492;
+}
+
